[gd_scene load_steps=5 format=2]

[ext_resource path="res://Image/images_faculdade/teste2.png" type="Texture" id=1]
[ext_resource path="res://Image/images_faculdade/Confirma.png" type="Texture" id=2]
[ext_resource path="res://Image/images_faculdade/erro.png" type="Texture" id=3]
[ext_resource path="res://Faculdade/Scripts/teste2.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta1_p1" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 371.0
margin_top = 207.0
margin_right = 487.0
margin_bottom = 239.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta2_p1" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 494.0
margin_top = 207.0
margin_right = 610.0
margin_bottom = 238.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta1_p2" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 371.0
margin_top = 348.0
margin_right = 487.0
margin_bottom = 379.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta2_p2" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 494.0
margin_top = 348.0
margin_right = 610.0
margin_bottom = 379.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta1_p3" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 371.0
margin_top = 499.0
margin_right = 487.0
margin_bottom = 531.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta2_p3" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 494.0
margin_top = 499.0
margin_right = 610.0
margin_bottom = 531.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="voltar" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 699.0
margin_top = 21.0
margin_right = 729.0
margin_bottom = 51.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="respostaCerta1" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 650.0
margin_top = 202.0
margin_right = 690.0
margin_bottom = 242.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="respostaCerta2" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 650.0
margin_top = 343.0
margin_right = 690.0
margin_bottom = 383.0
texture = ExtResource( 2 )

[node name="respostaCerta3" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 650.0
margin_top = 496.0
margin_right = 690.0
margin_bottom = 536.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="erro1" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 651.0
margin_top = 202.0
margin_right = 691.0
margin_bottom = 242.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="erro2" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 651.0
margin_top = 344.0
margin_right = 691.0
margin_bottom = 384.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="erro3" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 650.0
margin_top = 496.0
margin_right = 690.0
margin_bottom = 536.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta1_p1" to="." method="_on_pergunta1_p1_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta2_p1" to="." method="_on_pergunta2_p1_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta1_p2" to="." method="_on_pergunta1_p2_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta2_p2" to="." method="_on_pergunta2_p2_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta1_p3" to="." method="_on_pergunta1_p3_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta2_p3" to="." method="_on_pergunta2_p3_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/voltar" to="." method="_on_voltar_pressed"]
